# coding-agent-session-search

./: AGENTS.md  Cargo.toml  README.md  install.ps1  install.sh
.agent-mail/RedRiver/outbox/: to_team_bs8_start.md  to_team_fwr_start.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  dist.yml
benches/: cache_micro.rs  index_perf.rs  runtime_perf.rs  search_perf.rs
packaging/homebrew/: coding-agent-search.rb
src/: lib.rs
src/connectors/: amp.rs  chatgpt.rs  claude_code.rs
src/indexer/: mod.rs
src/search/: embedder.rs  fastembed_embedder.rs  mod.rs  model_manager.rs  query.rs  tantivy.rs  vector_index.rs
src/ui/: tui.rs
src/ui/components/: widgets.rs
tests/: install_scripts.rs  ranking.rs  ui_components.rs  ui_hotkeys.rs  watch_e2e.rs
tests/fixtures/install/: coding-agent-search  coding-agent-search-vtest-linux-x86_64.tar.gz.sha256  coding-agent-search-vtest-windows-x86_64.zip.sha256
