[package]
name = "coding-agent-search"
version = "0.1.36"
edition = "2024"
authors = ["Jeffrey Emanuel"]
description = "Unified TUI search over local coding agent histories"
license = "MIT"
resolver = "2"
repository = "https://github.com/Dicklesworthstone/coding_agent_session_search"
default-run = "cass"

[dependencies]
anyhow = "*"
thiserror = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter", "fmt", "ansi"] }
tokio = { version = "*", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "time", "signal"] }
clap = { version = "*", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "*"
clap_mangen = "*"
indicatif = "*"
console = "*"
colored = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"
directories = "*"
which = "*"
shell-words = "*"
dotenvy = "*"
notify = "*"
rusqlite = { version = "*", features = ["bundled", "modern_sqlite"] }
tantivy = "*"
rayon = "*"
crossbeam-channel = "*"
parking_lot = "*"
lru = "*"
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls", "blocking"] }
ratatui = { version = "*", features = ["crossterm"] }
crossterm = "*"
dirs = "*"
walkdir = "*"
glob = "*"
base64 = "*"
chrono = "*"
semver = "*"
tracing-appender = "*"
strsim = "0.11.1"
once_cell = "*"
syntect = "*"
itertools = "*"
crc32fast = "*"
unicode-normalization = "*"
half = "*"
memmap2 = "*"
fastembed = { version = "*", default-features = false, features = ["ort-download-binaries"] }

# Crypto for ChatGPT encrypted conversations
aes-gcm = "0.10"
ring = "0.17"

# macOS keychain access (optional, for ChatGPT decryption)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.11"

[build-dependencies]
vergen = { version = "*", default-features = false, features = ["build", "cargo"] }

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
tempfile = "*"
insta = { version = "*", features = ["yaml", "json"] }
criterion = "*"
once_cell = "*"
serial_test = "*"

[[bin]]
name = "cass"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"

[workspace.metadata.dist]
targets = ["x86_64-unknown-linux-gnu"]
installers = ["shell", "powershell"]
ci = ["github"]

[[bench]]
name = "index_perf"
harness = false

[[bench]]
name = "runtime_perf"
harness = false

[[bench]]
name = "search_perf"
harness = false
